# oasis24-backend-dummy

./: .flaskenv  .gitignore  README.md  pyproject.toml
oasis24_dummy_backend/: __init__.py
oasis24_dummy_backend/entities/commons/: polyline.py  vector2.py
oasis24_dummy_backend/entities/transaction/: response_enum.py
oasis24_dummy_backend/routes/: static.py
oasis24_dummy_backend/routes/api/: __init__.py
oasis24_dummy_backend/routes/api/moving_instance/: create.py  finish.py  get_sketches.py
oasis24_dummy_backend/schema/commons/: polyline.py
oasis24_dummy_backend/schema/requests/: create_moving_instance.py  finish_moving_instance.py  get_sketches.py
oasis24_dummy_backend/schema/responses/: base.py  create_moving_instance.py  finish_moving_instance.py  get_sketches.py
