[tool.poetry]
name = "oasis24-dummy-backend"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.3"
flask-restful = "^0.3.10"
python-dotenv = "^1.0.1"

[tool.poetry.group.dev.dependencies]
apispec = "^6.6.1"
flasgger = "^0.9.7.1"
marshmallow = "^3.22.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
